# nr-rfc-climate-obs

./: .env_sample  .flake8  .gitignore  .lintr  COMPLIANCE.yaml  README.md  pyproject.toml  r_data_prep.Dockerfile  r_py_data_prep.Dockerfile  renovate.json  testing_both.Dockerfile  zxs_data_pull.Dockerfile
.github/workflows/: copy_wildfire_climate_obs.yaml  main_datamart_dl.yml  pr-close.yaml  pr-open-r.yaml  run_asp.yaml  run_climate_obs.yaml  run_fwx.yaml  run_mpoml.yaml
cicd/climateobs/: Chart.yaml  readme.md  values.yaml
cicd/climateobs/templates/: NOTES.txt  _helpers.tpl  fire-data-acquisition-job.yaml  image_stream.yaml  pvc.yaml  zxs-data-acquisition-job.yaml
cicd/climateobs/templates/tests/: test-connection.yaml
cicd/fireweather/: Chart.yaml  readme.md  values.yaml
cicd/fireweather/templates/: NOTES.txt  _helpers.tpl  fire-data-acquisition-job.yaml  object_store_secrets.yaml  pvc.yaml
cicd/fireweather/templates/tests/: test-connection.yaml
docs/: architecture.md  background.md  climate_obs_architecture.drawio  data_description.mmd  ideas.md  notes.md  recover_objectstore_files.md  renv.md
scripts/: readme.md
scripts/bat/: ostore_push.bat  ostore_push.jenkins  readme.md  sync.bat
scripts/python/: ClimateOBS_hourly.py  DataMart_hourly_download.py  evaluate_data.py  fwx_typedicts.py  logging.config  main_ECCC_hourly.py  main_asp.py  main_fwx.py  main_fwx_api.py  main_fwx_reformat.py  main_mpoml.py  main_win32_climateobs_prep.py  main_zxs.py  remote_ostore_sync.py  requirements-asp.txt  requirements-datamartdl.txt  requirements-dev.txt  requirements-win32-xl.py  requirements-win32-xl.txt  requirements.txt  run_zxs.sh  s3recover.py  test.py
scripts/python/basic-app/: app.py  climate_utils.py
scripts/python/qa/: qa_notebook.ipynb  qa_script.py
scripts/python/tests/: conftest.py  pytest.ini  test_remote_ostore_sync.py
scripts/python/tests/fixtures/: both.html  config_fixtures.py  dirs.html  (+4 more)
scripts/r/: ASP_daily_climate.R  hourly_format.R
win_docker/: Dockerfile  odt_setup.config
